Understanding Color - Color Lighten Darken Accent, For Text using prefix text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <!--Import jQuery before materialize.js-->
+    <div class="card-panel light-green darken-4">
+      <span class="transparent">This is a card panel with dark blue text</span>
+    </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
