--- a/index.html
+++ b/index.html
@@ -12,8 +12,62 @@
 
 <body>
     <!--Import jQuery before materialize.js-->
-    <div class="card-panel light-green darken-4">
-      <span class="transparent">This is a card panel with dark blue text</span>
+    <div class="container">
+        <div class="row grey accent-4">
+            <div class="col s1">1</div>
+            <div class="col s1">2</div>
+            <div class="col s1">3</div>
+            <div class="col s1">4</div>
+            <div class="col s1">5</div>
+            <div class="col s1">6</div>
+            <div class="col s1">7</div>
+            <div class="col s1">8</div>
+            <div class="col s1">9</div>
+            <div class="col s1">10</div>
+            <div class="col s1">11</div>
+            <div class="col s1">12</div>
+        </div>
+        <div class="row blue accent-4">
+            <div class="col s12">This div is 12-columns wide</div>
+            <div class="col s6">This div is 6-columns wide</div>
+            <div class="col s6">This div is 6-columns wide</div>
+        </div>
+        <div class="row purple accent-4">
+            <div class="col s12"><span class="flow-text">This div is 12-columns wide on all screen sizes</span></div>
+            <div class="col s6 offset-s6"><span class="flow-text">6-columns (offset-by-6)</span></div>
+        </div>
+        <div class="row">
+            <div class="col s7 push-s5"><span class="flow-text">This div is 7-columns wide on pushed to the right by 5-columns.</span></div>
+            <div class="col s5 pull-s7"><span class="flow-text">5-columns wide pulled to the left by 7-columns.</span></div>
+        </div>
+        <div class="row">
+            <div class="col s12">
+                <p>s12</p>
+            </div>
+            <div class="col s12 m4 l2">
+                <p>s12 m4</p>
+            </div>
+            <div class="col s12 m4 l8">
+                <p>s12 m4</p>
+            </div>
+            <div class="col s12 m4 l2">
+                <p>s12 m4</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 m6 l3">
+                <p>s12 m6 l3</p>
+            </div>
+            <div class="col s12 m6 l3">
+                <p>s12 m6 l3</p>
+            </div>
+            <div class="col s12 m6 l3">
+                <p>s12 m6 l3</p>
+            </div>
+            <div class="col s12 m6 l3">
+                <p>s12 m6 l3</p>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
