Helper Class Understanding- Vertical Align, Horizontal Align, Float, Default Browser Style etc...

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="col s6">This div is 6-columns wide</div>
         </div>
         <div class="row purple accent-4">
-            <div class="col s12"><span class="flow-text">This div is 12-columns wide on all screen sizes</span></div>
+            <div class="col s12"><span class="flow-text white-text">This div is 12-columns wide on all screen sizes</span></div>
             <div class="col s6 offset-s6"><span class="flow-text">6-columns (offset-by-6)</span></div>
         </div>
         <div class="row">
@@ -67,6 +67,25 @@
             <div class="col s12 m6 l3">
                 <p>s12 m6 l3</p>
             </div>
+        </div>
+        <div>
+            <h5 class="left-align">This should be left aligned</h5>
+        </div>
+        <div>
+            <h5 class="right-align">This should be right aligned</h5>
+        </div>
+        <div>
+            <h5 class="center-align">This should be center aligned</h5>
+        </div>
+        <div class="card-panel hoverable"> Hoverable Card Panel</div>
+        <div class="input-field col s12">
+            <select>
+                <option value="" selected>Choose your option</option>
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+            </select>
+            <label>Materialize Select</label>
         </div>
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
