--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 <body>
     <!--Import jQuery before materialize.js-->
     <div class="container">
+        <div class="col s12 m8 offset-m2 l6 offset-l3">
+            <div class="card-panel grey lighten-5 z-depth-1">
+                <div class="row valign-wrapper">
+                    <div class="col s2">
+                        <img src="images/yuna.jpg" alt="" class="circle responsive-img">
+                        <!-- notice the "circle" class -->
+                    </div>
+                    <div class="col s10">
+                        <span class="black-text">
+                This is a square image. Add the "circle" class to it to make it appear circular.
+              </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <video class="responsive-video" controls>
+            <source src="videos/movie.mp4" type="video/mp4">
+        </video>
         <div class="row grey accent-4">
             <div class="col s1">1</div>
             <div class="col s1">2</div>
