--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 <body>
     <!--Import jQuery before materialize.js-->
     <div class="container">
+      <div class="row">
+        <div class="col s12 m2">
+            <p class="z-depth-1">z-depth-1</p>
+        </div>
+        <div class="col s12 m2">
+            <p class="z-depth-2">z-depth-2</p>
+        </div>
+        <div class="col s12 m2">
+            <p class="z-depth-3">z-depth-3</p>
+        </div>
+        <div class="col s12 m2">
+            <p class="z-depth-4">z-depth-4</p>
+        </div>
+        <div class="col s12 m2">
+            <p class="z-depth-5">z-depth-5</p>
+        </div>
+      </div>
         <div class="col s12 m8 offset-m2 l6 offset-l3">
             <div class="card-panel grey lighten-5 z-depth-1">
                 <div class="row valign-wrapper">
