--- a/index.html
+++ b/index.html
@@ -8,55 +8,63 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style type="text/css">
+    html {
+        font-family: GillSans, Calibri, Trebuchet, sans-serif;
+    }
+    </style>
 </head>
 
 <body>
     <!--Import jQuery before materialize.js-->
     <div class="container">
-      <table class="bordered striped highlight centered responsive">
-        <thead>
-          <tr>
-              <th data-field="id">Name</th>
-              <th data-field="name">Item Name</th>
-              <th data-field="price">Item Price</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          <tr>
-            <td>Alvin</td>
-            <td>Eclair</td>
-            <td>$0.87</td>
-          </tr>
-          <tr>
-            <td>Alan</td>
-            <td>Jellybean</td>
-            <td>$3.76</td>
-          </tr>
-          <tr>
-            <td>Jonathan</td>
-            <td>Lollipop</td>
-            <td>$7.00</td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="row">
-        <div class="col s12 m2">
-            <p class="z-depth-1">z-depth-1</p>
+        <blockquote>
+            This is an example quotation that uses the blockquote tag.
+        </blockquote>
+        <p class="flow-text">I am Flow Text</p>
+        <table class="bordered striped highlight centered responsive">
+            <thead>
+                <tr>
+                    <th data-field="id">Name</th>
+                    <th data-field="name">Item Name</th>
+                    <th data-field="price">Item Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Alvin</td>
+                    <td>Eclair</td>
+                    <td>$0.87</td>
+                </tr>
+                <tr>
+                    <td>Alan</td>
+                    <td>Jellybean</td>
+                    <td>$3.76</td>
+                </tr>
+                <tr>
+                    <td>Jonathan</td>
+                    <td>Lollipop</td>
+                    <td>$7.00</td>
+                </tr>
+            </tbody>
+        </table>
+        <div class="row">
+            <div class="col s12 m2">
+                <p class="z-depth-1">z-depth-1</p>
+            </div>
+            <div class="col s12 m2">
+                <p class="z-depth-2">z-depth-2</p>
+            </div>
+            <div class="col s12 m2">
+                <p class="z-depth-3">z-depth-3</p>
+            </div>
+            <div class="col s12 m2">
+                <p class="z-depth-4">z-depth-4</p>
+            </div>
+            <div class="col s12 m2">
+                <p class="z-depth-5">z-depth-5</p>
+            </div>
         </div>
-        <div class="col s12 m2">
-            <p class="z-depth-2">z-depth-2</p>
-        </div>
-        <div class="col s12 m2">
-            <p class="z-depth-3">z-depth-3</p>
-        </div>
-        <div class="col s12 m2">
-            <p class="z-depth-4">z-depth-4</p>
-        </div>
-        <div class="col s12 m2">
-            <p class="z-depth-5">z-depth-5</p>
-        </div>
-      </div>
         <div class="col s12 m8 offset-m2 l6 offset-l3">
             <div class="card-panel grey lighten-5 z-depth-1">
                 <div class="row valign-wrapper">
@@ -66,8 +74,8 @@
                     </div>
                     <div class="col s10">
                         <span class="black-text">
-                This is a square image. Add the "circle" class to it to make it appear circular.
-              </span>
+This is a square image. Add the "circle" class to it to make it appear circular.
+</span>
                     </div>
                 </div>
             </div>
